--- a/Customer_Review_Project (2).ipynb
+++ b/Customer_Review_Project (2).ipynb
@@ -1227,7 +1227,7 @@
    "id": "4ee440cc",
    "metadata": {},
    "source": [
-    "The most relevant words of Contentsquare customers use to describe their experience are:\n",
+    "The most relevant words that Contentsquare customers use to describe their experience are:\n",
     "\n",
     "**-outil, tool, data, team, très, content, insights, permet, support, easy, indispensable**\n",
     "\n",
